--- a/Install.txt
+++ b/Install.txt
@@ -70,6 +70,14 @@ or
 $ adb forward --remove-all
 to remove all forwards
 
+Building Gammaray probe for IOS (OSX "El Capitan" / Qt 5.7 / Xcode 8 / iphone SDK 10.0):
+Make sure you have gdb and qmake in your path
+% export QT_DIR=<QT HOME>
+% mkdir build
+% cd build
+% cmake -DCMAKE_TOOLCHAIN_FILE=../cmake/Toolchain-IOS.cmake -DCMAKE_PREFIX_PATH=${QT_DIR}/5.7/ios -DGAMMARAY_STATIC_PROBE=TRUE -DCMAKE_INSTALL_PREFIX=$SYSROOT/usr/ -DGAMMARAY_BUILD_UI=OFF -G Xcode ..
+% /usr/bin/xcodebuild -project GammaRay.xcodeproj build -target gammaray_probe -configuration Release
+
 == Cross-compiling GammaRay ==
 You'll find more information on this in the wiki:
 https://github.com/KDAB/GammaRay/wiki/Cross-compiling-GammaRay
