--- a/docs/man/gammaray.pod
+++ b/docs/man/gammaray.pod
@@ -146,6 +146,8 @@ StackWalker code Copyright (c) 2005-2009, Jochen Kalmbach, All rights reserved.
 
 lz4 fast LZ compression code Copyright (C) 2011-2015, Yann Collet, All rights reserved.
 
+Backward-cpp code Copyright 2013 Google Inc. All rights reserved.
+
 =head1 AUTHORS
 
  Allen Winter <allen.winter@kdab.com>
