Update authors list

--- a/resources/gammaray/authors
+++ b/resources/gammaray/authors
@@ -1,12 +1,16 @@
 Allen Winter <allen.winter@kdab.com>
+Andreas Hartmetz <andreas.hartmetz@kdab.com>
 Andreas Holzammer <andreas.holzammer@kdab.com>
 Anton Kreuzkamp <anton.kreuzkamp@kdab.com>
 BogDan Vatra <bogdan.vatra@kdab.com>
-Dan Vrátil <dvratil@redhat.com>
+Christoph Sterz <christoph.sterz@kdab.com>
+Dan Vrátil <daniel.vratil@kdab.com
 David Faure <david.faure@kdab.com>
 Filipe Azevedo <filipe.azevedo@kdab.com>
 Frank Osterfeld <frank.osterfeld@kdab.com>
+Giulio Camuffo <giulio.camuffo@kdab.com>
 James Turner <james.turner@kdab.com>
+Jan Arne Petersen <jan.petersen@kdab.com>
 Jan Dalheimer <jan.dalheimer@kdab.com>
 Kevin Funk <kevin.funk@kdab.com>
 Laurent Montel <laurent.montel@kdab.com>
