Fix Android build instructions
We don't want to build the UI for Android, but we do want a complete probe.
GAMMARAY_PROBE_ONLY_BUILD will only give us a probe to be used alongside
an existing complete build, lacking for example the qmake integration.

Fixes issue #368.

--- a/Install.txt
+++ b/Install.txt
@@ -49,7 +49,7 @@ $ mkdir android-build
 $ cd android-build
 $ export ANDROID_NDK=~/path/to/android-ndk
 $ cmake -DCMAKE_TOOLCHAIN_FILE=../cmake/Toolchain-android.cmake \
-        -DGAMMARAY_PROBE_ONLY_BUILD=true \
+        -DGAMMARAY_BUILD_UI=OFF \
         -DCMAKE_PREFIX_PATH=/android/qt5/install/path \
         -DCMAKE_INSTALL_PREFIX=/android/qt5/install/path ..
 $ make [-j CPU_NUMBER+2]
