--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,18 @@
 Release Highlights
 ==================
 
+Version 2.8.1
+-------------
+ * Fix compilation with interestingly packaged qmllint on Ubuntu.
+ * Fix error handling in LLDB injector when LLDB scripting support is not available.
+ * Fix tree view corruption when searching.
+ * Fix linking with backward-cpp in BFD mode using a static libbdf.
+ * Fix assert when launching a Windows target using a Qt debug build.
+ * Fix crash during attaching on Windows.
+ * Fix build with MSVC2010 and Qt4.8.
+ * Fix attach dialog not seeing 32bit processes on 64bit Windows systems.
+ * Add support for Qt 5.9.2.
+
 Version 2.8.0
 -------------
  * Fix possible deadlock in WinDLL injector.
