Update build requirements in the documentation

--- a/Install.txt
+++ b/Install.txt
@@ -12,8 +12,8 @@ To build a debug version pass -DCMAKE_BUILD_TYPE=Debug to cmake.
 
 To build GammaRay you will need *at least*:
  - CMake 3.1.0
- - a C++ compiler with C++11 lambda support
- - Qt 4.8 or higher
+ - a C++ compiler with C++11 support
+ - Qt 5.5 or higher
 
 Optional FOSS packages (eg. KDSME, etc) provide extra functionality.
 See the "Optional Dependencies" section below for more details.
