--- a/docs/api/Mainpage.dox
+++ b/docs/api/Mainpage.dox
@@ -91,19 +91,24 @@ The GammaRay Software is (C) 2010-2019 Klarälvdalens Datakonsult AB (KDAB),
 and is available under the terms of the GPL version 2 (or any later version,
 at your option).  See LICENSE.GPL.txt for license details.
 
-Commercial use is also permitted as described in ReadMe-commercial.txt.
+Commercial licensing terms are available in the included file LICENSE.txt.
+
+For terms of redistribution, refer to the corresponding license agreement.
 
 @section about-KDAB About KDAB
 
 GammaRay is supported and maintained by Klarälvdalens Datakonsult AB (KDAB)
 
-KDAB, the Qt experts, provide consulting and mentoring for developing
-Qt applications from scratch and in porting from all popular and legacy
-frameworks to Qt. We continue to help develop parts of Qt and are one
-of the major contributors to the Qt Project. We can give advanced or
-standard trainings anywhere around the globe.
+The KDAB Group is the global No.1 software consultancy for Qt, C++ and
+OpenGL applications across desktop, embedded and mobile platforms.
 
-Please visit https://www.kdab.com to meet the people who write code like this.
+The KDAB Group provides consulting and mentoring for developing Qt applications
+from scratch and in porting from all popular and legacy frameworks to Qt.
+We continue to help develop parts of Qt and are one of the major contributors
+to the Qt Project. We can give advanced or standard trainings anywhere
+around the globe on Qt as well as C++, OpenGL, 3D and more.
+
+Get in touch with KDAB at https://www.kdab.com/contact.
 
 @namespace GammaRay \brief All GammaRay classes.
 
