various - conanfile improvements

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Release Highlights
 ==================
 
+Version 2.11.1
+--------------
+ * Comes with an installing file for Conan (see conan folder).
+
 Version 2.11.0
 --------------
 
