--- a/docs/man/gammaray.pod
+++ b/docs/man/gammaray.pod
@@ -146,7 +146,7 @@ StackWalker code Copyright (c) 2005-2019, Jochen Kalmbach, All rights reserved.
 
 lz4 fast LZ compression code Copyright (C) 2011-2015, Yann Collet, All rights reserved.
 
-Backward-cpp code Copyright 2013 Google Inc. All rights reserved.
+backward-cpp code Copyright 2013-2017 Google Inc. All rights reserved.
 
 =head1 AUTHORS
 
