--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Release Highlights
 ==================
 
+Version 3.0.0 (unreleased)
+ * Increase CMake requirement to version 3.11.0.
+ * Port to Qt6 (in-progress)
+
 Version 2.11.3
 --------------
  * Increase CMake requirement to version 3.4.0 (reflecting reality).
