--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,14 @@ Release Highlights
 Version 2.11.3
 --------------
  * Increase CMake requirement to version 3.4.0 (reflecting reality).
+ * Update 3rdparty/StackWalker.
+ * Update 3rdparty/backward-cpp.
+ * Don't fail self-test for lldb version 10.x.
+ * Support for CMAKE_SYSTEM_PROCESSOR amd64.
+ * Fix crash when editing the margins property of a QtCharts/ChartView.
+ * Fix crash when attaching to an ASAN-enabled application.
+ * Register stream operators for Qt::CaseSensitivity.
+ * Clean some runtime, compile , CMake warnings, etc.
 
 Version 2.11.2
 --------------
