--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,8 @@
 Release Highlights
 ==================
 
-Version 3.0.0 (unreleased)
---------------------------
+Version 3.0.0 (01 September 2023)
+---------------------------------
  * Port to Qt6.
  * Network operations now optionally allow capturing HTTP response body.
  * Objects can now be favorited via context menu. A favorited object appears in a separate item view above the main itemview
