This would become version 3.0.1

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Release Highlights
 ==================
 
+Version 3.0.1 (unreleased)
+--------------------------
+ *
+
 Version 3.0.0 (04 September 2023)
 ---------------------------------
  * Port to Qt6.
