--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Release Highlights
 ==================
 
+Version 3.1.0 (unreleased)
+--------------------------
+ *
+
 Version 3.0.1 (unreleased)
 --------------------------
  *
