Require Qt5.15 or above.
i.e no longer support Qt5 versions < 5.15

Future patches will remove code specific for
Qt versions less than 5.15.

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,7 @@ Release Highlights
 
 Version 3.1.0 (unreleased)
 --------------------------
- *
+ * Qt5 versions less than 5.15 are no longer supported
 
 Version 3.0.1 (unreleased)
 --------------------------
