gammaray/authors - updated, since 2.x release

--- a/resources/gammaray/authors
+++ b/resources/gammaray/authors
@@ -1,27 +1,50 @@
+Albert Astals Cid <albert.astals.cid@kdab.com>
+Alessandro Ambrosano <alessandro.ambrosano@kdab.com>
+Aleš Petrovački <ales.petrovacki@kdab.com>
 Allen Winter <allen.winter@kdab.com>
+Andras Mantia <andras.mantia@kdab.com>
 Andreas Hartmetz <andreas.hartmetz@kdab.com>
 Andreas Holzammer <andreas.holzammer@kdab.com>
 Anton Kreuzkamp <anton.kreuzkamp@kdab.com>
+Björn Breitmeyer <bjoern.breitmeyer@kdab.com>
 BogDan Vatra <bogdan.vatra@kdab.com>
+Carl Schwan <carl.schwan@kdab.com>
 Christoph Sterz <christoph.sterz@kdab.com>
-Dan Vrátil <daniel.vratil@kdab.com
+Daniel Nicoletti <daniel.nicoletti@kdab.com>
+Daniel Vrátil <daniel.vratil@kdab.com>
 David Faure <david.faure@kdab.com>
+David Morgan <david.morgan@kdab.com>
 Filipe Azevedo <filipe.azevedo@kdab.com>
 Frank Osterfeld <frank.osterfeld@kdab.com>
 Giulio Camuffo <giulio.camuffo@kdab.com>
+Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>
+Hannah von Reth <hannah.vonreth@kdab.com>
 James Turner <james.turner@kdab.com>
 Jan Arne Petersen <jan.petersen@kdab.com>
 Jan Dalheimer <jan.dalheimer@kdab.com>
+Javier O. Cordero Pérez <javier.cordero@kdab.com>
+Joshua Goins <joshua.goins@kdab.com>
 Kevin Funk <kevin.funk@kdab.com>
 Laurent Montel <laurent.montel@kdab.com>
+Magnus Groß <magnus.gross@kdab.com>
+Manfred Tonch <manfred.tonch@kdab.com>
+Marc Mutz <marc.mutz@kdab.com>
 Mathias Hasselmann <mathias.hasselmann@kdab.com>
+Matt Aber <matt.aber@kdab.com>
+Mike Krus <mike.krus@kdab.com>
+Mike McQuaid <mike.mcquaid@kdab.com>
 Milian Wolff <milian.wolff@kdab.com>
+Nathan Collins <nathan.collins@kdab.com>
 Nicolas Arnaud-Cormos <nicolas.arnaud-cormos@kdab.com>
+Nicolas Fella <nicolas.fella@kdab.com>
 Patrick Spendrin <patrick.spendrin@kdab.com>
 Peter Kümmel <syntheticpp@gmx.net>
 Rafael Roquetto <rafael.roquetto@kdab.com>
-Sergio Martins <sergio.martins@kdab.com>
+Renato Araujo <renato.araujo@kdab.com>
+Shantanu Tushar <shantanu.tushar@kdab.com>
+Steffen Hansen <steffen.hansen@kdab.com>
 Stephen Kelly <stephen.kelly@kdab.com>
+Sérgio Martins <sergio.martins@kdab.com>
 Thomas McGuire <thomas.mcguire@kdab.com>
 Till Adam <till.adam@kdab.com>
 Tobias Koenig <tobias.koenig@kdab.com>
