--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,8 @@ Release Highlights
 
 Version 3.3.0
 -------------
- *
+ * Drop Qt 5 support, minimum is 6.5 now
+ * Update LZ4 to v1.10.0
 
 Version 3.2.0
 -------------
