Fix GammaRay GUI not showing up on Windows
The target sends the TCP address via a QLocalSocket, but Windows
is very prone to partial writes.

Ensure all bytes are written before closing the socket.

Simplified the launcher code, no need to use a while, as the target
only sends 1 message. Ignore the readyRead that contain partial writes.

Related to some comments in issue #959

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Version 3.3.0
 -------------
  * Drop Qt 5 support, minimum is 6.5 now
  * Add support for LLVM MinGW on Windows
+ * Fix GammaRay UI not appearing sometimes on Windows
  * Update LZ4 to v1.10.0
 
 Version 3.2.1
