Fix GammaRay GUI not showing up on Windows
The target sends the TCP address via a QLocalSocket, but Windows
is very prone to partial writes.

Ensure all bytes are written before closing the socket.

Simplified the launcher code, no need to use a while, as the target
only sends 1 message. Ignore the readyRead that contain partial writes.

Related to some comments in issue #959

(cherry picked from commit 95e6b929a6348c0931279679c5cd79706a872f61)

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Release Highlights
 ==================
 
+Version 3.2.2
+-------------
+* Fix GammaRay GUI not showing up on Windows
+
 Version 3.2.1
 -------------
  * Fix infinite in loop QuickSceneGraphModel::itemForSgNode() (#1070)
