--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Version 3.3.0
  * Add support for LLVM MinGW on Windows
  * Fix GammaRay UI not appearing sometimes on Windows
  * Update LZ4 to v1.10.0
+ * Fix build with Qt 6.10
 
 Version 3.2.1
 -------------
