--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Release Highlights
 ==================
 
+Version 3.4.0
+-------------
+ * Add support for Qt 6.11
+ * Take into account the space between above or below a QQuickWidget
+
 Version 3.3.1
 -------------
  * Fix build with Qt 6.10.1
